fix tag a in header

--- a/Quiz CSS/index.html
+++ b/Quiz CSS/index.html
@@ -13,9 +13,9 @@
 
     <div class="container">
         <header class="header">
-            <a>Home</a> /
-            <a>Office Room</a> /
-            <a>Details</a>
+            <a href="#">Home</a> /
+            <a href="#">Office Room</a> /
+            <a href="#">Details</a>
         </header>
         <div class="body">
             <div class="box">
