revisi: index pada javascript

--- a/Quiz Bootstrap/index.html
+++ b/Quiz Bootstrap/index.html
@@ -157,19 +157,19 @@
         </div>
 
         <div class="links d-flex flex-row justify-content-around pb-5">
-            <div class="list-1 d-flex flex-column">
+            <div class="d-flex flex-column">
                 <a href="#" class="text-dark nav-link"><b>Overview</b></a>
                 <a href="#" class="text-dark nav-link">Shipping</a>
                 <a href="#" class="text-dark nav-link">Refund</a>
                 <a href="#" class="text-dark nav-link">Promotion</a>
             </div>
-            <div class="list-2 d-flex flex-column">
+            <div class="d-flex flex-column">
                 <a href="#" class="text-dark nav-link"><b>Company</b></a>
                 <a href="#" class="text-dark nav-link">About</a>
                 <a href="#" class="text-dark nav-link">Career</a>
                 <a href="#" class="text-dark nav-link">Contact Us</a>
             </div>
-            <div class="list-3 d-flex flex-column">
+            <div class="d-flex flex-column">
                 <a href="#" class="text-dark nav-link"><b>Explore</b></a>
                 <a href="#" class="text-dark nav-link">Terms & Conds</a>
                 <a href="#" class="text-dark nav-link">Privacy Policy</a>
