--- a/Quiz Javascript Object & Array/index.html
+++ b/Quiz Javascript Object & Array/index.html
@@ -6,11 +6,90 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Object & Array</title>
-    <script src="js/javascripts.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <script src="js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
+    <!-- Navbar Section -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-5 py-3">
+        <a class="navbar-brand" href="#">Tugas Javascript</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </nav>
+    <!-- End Navbar Section -->
 
+    <!-- Content Section -->
+    <div class="d-flex flex-column justify-content-center py-5 m-3">
+        <div class="p-3">
+            <div class="text-center mb-4">
+                <h1>Hasil Tugas</h1>
+            </div>
+            <table class="table table-bordered table-striped table-hover">
+                <tr>
+                    <td style="width: 2%;">1</td>
+                    <td style="width: 20%;">
+                        <p>Nama</p>
+                    </td>
+                    <td>
+                        <p id="nama"></p>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="width: 5px;">2</td>
+                    <td style="width: 20%;">
+                        <p>Sekolah</p>
+                    </td>
+                    <td>
+                        <p id="sma"></p>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="width: 5px;">3</td>
+                    <td style="width: 20%;">
+                        <p>Kota</p>
+                    </td>
+                    <td>
+                        <p id="kota"></p>
+                    </td>
+                </tr>
+                <tr>
+                    <td style="width: 5px;">4</td>
+                    <td style="width: 20%;">
+                        <p>Makanan Favorit</p>
+                    </td>
+                    <td>
+                        <p id="makanan"></p>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+    <!-- End Content Section -->
+
+    <!-- Copyright Section -->
+    <footer class="text-light bg-dark">
+        <div class="container">
+            <div class="row justify-content-center pt-5">
+                <div class="col-md-12 text-center">
+                    <h2><a href="#" class="text-light">Javascript</a></h2>
+                </div>
+            </div>
+            <div class="row mt-5 pb-2">
+                <div class="col-md-12 text-center">
+                    <p>
+                        Copyright &copy;
+                        <script>document.write(new Date().getFullYear());</script> All rights reserved </i> by <a
+                            href="#" target="_blank" class="text-light">Ipuly</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- End Copyright Section -->
+    <script src="js/javascripts.js"></script>
 </body>
 
 </html>
