--- a/Quiz Jquery/index.html
+++ b/Quiz Jquery/index.html
@@ -80,11 +80,10 @@
             <img id="preview" src="assets/img/chair.png" alt="chair" class="border-rounded">
         </div>
         <div class="mr-5">
-            <h2>Chair Thatty</h2>
-            <p>IDR 12.000.000</p>
+            <h2 id="name">Chair Thatty</h2>
+            <p id="price">IDR 12.000.000</p>
             <a href="shipping.html"><button type="button"
-                    class="btn border-rounded mb-3 border-0 px-4 py-2 d-flex align-items-center"
-                    style="background-color: pink;">
+                    class="btn border-rounded mb-3 bg-pink border-0 px-4 py-2 d-flex align-items-center">
                     <img src="assets/img/cart-icon.svg" alt="button-cart"> Add to
                     Chart</button></a>
             <hr>
@@ -110,29 +109,29 @@
             <div class="card border-rounded border-0" style="width: 18rem;">
                 <img class="card-1 border-rounded px-3 pt-3" src="assets/img/chair-1.png" alt="chair-1">
                 <div class="card-body">
-                    <h5 class="card-title">Cangkir Mauttie</h5>
-                    <p class="card-text">IDR 89.300.000</p>
+                    <h5 class="card-title" id="name">Cangkir Mauttie</h5>
+                    <p class="card-text" id="price">IDR 89.300.000</p>
                 </div>
             </div>
             <div class="card border-rounded border-0" style="width: 18rem;">
                 <img class="card-2 border-rounded px-3 pt-3" src="assets/img/chair-2.png" alt="chair-2">
                 <div class="card-body">
-                    <h5 class="card-title">Samman Kakka</h5>
-                    <p class="card-text">IDR 14.500.000</p>
+                    <h5 class="card-title" id="name">Samman Kakka</h5>
+                    <p class="card-text" id="price">IDR 14.500.000</p>
                 </div>
             </div>
             <div class="card border-rounded border-0" style="width: 18rem;">
                 <img class="card-3 border-rounded px-3 pt-3" src="assets/img/chair-3.png" alt="chair-3">
                 <div class="card-body">
-                    <h5 class="card-title">Lino Dino</h5>
-                    <p class="card-text">IDR 22.000.000</p>
+                    <h5 class="card-title" id="name">Lino Dino</h5>
+                    <p class="card-text" id="price">IDR 22.000.000</p>
                 </div>
             </div>
             <div class="card border-rounded border-0" style="width: 18rem;">
                 <img class="card-4 border-rounded px-3 pt-3" src="assets/img/chair-4.png" alt="chair-4">
                 <div class="card-body">
-                    <h5 class="card-title">Syail Ammeno</h5>
-                    <p class="card-text">IDR 12.000.000</p>
+                    <h5 class="card-title" id="name">Syail Ammeno</h5>
+                    <p class="card-text" id="price">IDR 12.000.000</p>
                 </div>
             </div>
         </div>
@@ -169,9 +168,9 @@
                 <div class="bg-light" style="border-radius: 10px; overflow: hidden;">
                     <input class="bg-light px-3 py-10" id="inputNama" style="border: none;" type="email" name="email"
                         required placeholder="Your email address">
-                    <button type="submit" class="btn rounded" id="btnAlert"
-                        style="background-color: pink; border: none; cursor: pointer;"><img
-                            src="assets/img/tele-icon.png" alt="subscribe" class="p-2"></button>
+                    <button type="submit" class="btn rounded bg-pink" id="btnAlert"
+                        style="border: none; cursor: pointer;"><img src="assets/img/tele-icon.png" alt="subscribe"
+                            class="p-2"></button>
                 </div>
             </form>
         </div>
