--- a/Quiz Jquery/shipping.html
+++ b/Quiz Jquery/shipping.html
@@ -62,7 +62,7 @@
 
     <!-- Content Section -->
     <div class="row justify-content-center my-5">
-        <div class="col-6 border-pink p-5 rounded" id="form-main">
+        <div class="col-6 border-pink p-5 rounded" id="div-shipping">
             <h2 class="text-center mb-4">Shipping Form</h2>
             <form id="form-shipping">
                 <div class="form-row">
@@ -109,16 +109,17 @@
                     </div>
 
                     <div class="form-group col-12">
-                        <button type="submit" class="btn rounded" style="background-color: pink;">Submit</button>
+                        <button type="submit" class="btn rounded bg-pink">Submit</button>
                     </div>
                 </div>
             </form>
         </div>
 
+        <!-- Checkout -->
         <div class="d-none" id="result">
             <h4></h4>
             <p></p>
-            <button type="submit" class="btn-submit border-0 py-2 px-3" style="background-color: pink;">Back</button>
+            <button type="submit" class="btn-submit bg-pink border-0 py-2 px-3">Back</button>
         </div>
 
     </div>
